<resources>
    <string name="app_name">Inventory App</string>

    <string name="action_delete_all_entries">Delete All Data</string>

    <string name="empty_view_title_text">It\'s empty...</string>

    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="editor_activity_title_new_product">Add a Product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="editor_insert_product_successful">Product saved</string>

    <string name="editor_insert_product_failed">Error with saving product</string>

    <string name="editor_update_product_successful">Product updated</string>

    <string name="editor_update_product_failed">Error with updating product</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="category_name">Product Name</string>

    <string name="category_quantity">Quantity</string>

    <string name="category_price">Price</string>

    <string name="choose_image">Choose Picture</string>

    <string name="sell_button">Sell</string>

    <string name="editor_insert_inv_failed">Insert Failed</string>

    <string name="editor_insert_inv_successful">Insert Successful</string>

    <string name="editor_blank">Fields can\'t be blank</string>

    <string name="details_quantity_negative">Quantity can\'t be negative</string>

    <string name="update_menu_delete">Delete</string>

    <string name="update_name">Name</string>

    <string name="update_price">Price</string>

    <string name="update_quantity">Quantity</string>

    <string name="total_sold">Total Sold</string>

    <string name="details_image">Product Image</string>

</resources>
